2014-02-02
    - Use Digest::SHA instead of Digest::SHA1
        - Digest::SHA is core and preferred by Debian.
        - https://rt.cpan.org/Ticket/Display.html?id=92658
    - Bugfix/maintenance release (2.09)

2014-01-26
    - Convert from use "warnings::register;" to "use warnings;".
    - Bugfix/maintenance release (2.08)

2014-01-26
    - Add perl to the prereq in META.yml/META.json
        - Kwalitee / CPANTS
    - Bugfix/maintenance release (2.07)

2013-09-13
    - Increase the delay of the cache invalidation in the tests by default to
    avoid test failures due to high load.
        - https://rt.cpan.org/Public/Bug/Display.html?id=27280
        - One can set the PERL_CACHE_PM_TESTING environment variable to a true
        value to set it back at a quicker-to-run 1 second delay.
        - Thanks to ANDK for reporting it.
    - Fix Bug in Cache::Memory regarding Namespaces
        - https://rt.cpan.org/Ticket/Display.html?id=32339 .
        - ->set after ->set_namespace failed.
        - Thanks to justin@techadvise.com for the report and for a proposed
        fix.
    - Get rid of trailing space.
        - Add t/style-trailing-space.t
    - Bugfix/maintenance release (2.06)

2013-09-05
    - Add t/pod.t and got the embedded PODs to validate.
    - Convert the Build system to Module-Build.
    - Fix https://rt.cpan.org/Ticket/Display.html?id=78817
        - Fix a warning for lc called with undef value
        when "-w" is specified - during some tests.
    - Tests fail or get stuck on Windows - use Devel::AssertOS to make sure
    we don't build there.
        - https://rt.cpan.org/Ticket/Display.html?id=81386
        - if a kind soul will fix the tests and/or the code on MSWin, we will
        remove it.
    - Bugfix/maintenance release (2.05)

2006-02-01
	- Bugfix release (2.04)
	- Fix for failure to call load_callback when verify_callback
	  fails the result (credit to Chris Fletcher).

2005-11-08