@@ -4,9 +4,9 @@ author:
   - 'Chris Leishman <chris@leishman.org>'
 build_requires: {}
 configure_requires:
-  Module::Build: 0
+  Module::Build: '0'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4007, CPAN::Meta::Converter version 2.132830'
+generated_by: 'Module::Build version 0.4205, CPAN::Meta::Converter version 2.141170'
 keywords:
   - cache
   - caching
@@ -21,70 +21,70 @@ keywords:
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Cache
 provides:
   Cache:
     file: lib/Cache.pm
-    version: 2.09
+    version: '2.10'
   Cache::Entry:
     file: lib/Cache/Entry.pm
-    version: 2.09
+    version: '2.10'
   Cache::File:
     file: lib/Cache/File.pm
-    version: 2.09
+    version: '2.10'
   Cache::File::Entry:
     file: lib/Cache/File/Entry.pm
-    version: 2.09
+    version: '2.10'
   Cache::File::Handle:
     file: lib/Cache/File/Handle.pm
   Cache::File::Heap:
     file: lib/Cache/File/Heap.pm
-    version: 2.09
+    version: '2.10'
   Cache::IOString:
     file: lib/Cache/IOString.pm
   Cache::Memory:
     file: lib/Cache/Memory.pm
-    version: 2.09
+    version: '2.10'
   Cache::Memory::Entry:
     file: lib/Cache/Memory/Entry.pm
-    version: 2.09
+    version: '2.10'
   Cache::Memory::HeapElem:
     file: lib/Cache/Memory/HeapElem.pm
   Cache::Null:
     file: lib/Cache/Null.pm
-    version: 2.09
+    version: '2.10'
   Cache::Null::Entry:
     file: lib/Cache/Null/Entry.pm
-    version: 2.09
+    version: '2.10'
   Cache::RemovalStrategy:
     file: lib/Cache/RemovalStrategy.pm
-    version: 2.09
+    version: '2.10'
   Cache::RemovalStrategy::FIFO:
     file: lib/Cache/RemovalStrategy/FIFO.pm
   Cache::RemovalStrategy::LRU:
     file: lib/Cache/RemovalStrategy/LRU.pm
   Cache::Tester:
     file: lib/Cache/Tester.pm
-    version: 2.09
+    version: '2.10'
 requires:
-  DB_File: 1.72
-  Date::Parse: 2.24
-  Digest::SHA: 0
-  Fcntl: 1.03
-  File::Find: 0
-  File::NFSLock: 1.20
-  File::Path: 1.00
-  File::Spec: 0.8
-  Heap::Fibonacci: 0.01
-  IO::File: 1.08
-  IO::Handle: 1.21
-  IO::String: 1.02
-  Storable: 1.00
-  Symbol: 1.02
-  Test::More: 0.45
-  perl: 5.006
+  DB_File: '1.72'
+  Date::Parse: '2.24'
+  Digest::SHA: '0'
+  Fcntl: '1.03'
+  File::Find: '0'
+  File::NFSLock: '1.20'
+  File::Path: '1.00'
+  File::Spec: '0.8'
+  Heap::Fibonacci: '0.01'
+  IO::File: '1.08'
+  IO::Handle: '1.21'
+  IO::String: '1.02'
+  Storable: '1.00'
+  Symbol: '1.02'
+  Test::More: '0.45'
+  perl: '5.006'
 resources:
   license: http://dev.perl.org/licenses/
   repository: http://bitbucket.org/shlomif/web-cpan
-version: 2.09
+version: '2.10'
