@@ -7,7 +7,7 @@ use Carp;
 
 $SIG{__DIE__} = sub { confess @_; };
 
-BEGIN { plan tests => 2 + $CACHE_TESTS + 3 }
+BEGIN { plan tests => 2 + $CACHE_TESTS + 3 + 1 }
 
 use_ok('Cache::File');
 
@@ -23,11 +23,30 @@ use_ok('Cache::File');
 }
 
 {
+    my $tempdir = tempdir(CLEANUP => 1);
+    my $cache = Cache::File->new(cache_root => $tempdir,);
+    {
+        # See:
+        # https://rt.cpan.org/Public/Bug/Display.html?id=95608
+        my $warning;
+        {
+            local $SIG{__WARN__} = sub { $warning = shift; };
+
+            $cache->set ('test', {x => 23}, '10 s');
+        }
+        like ($warning, qr/\AReference passed to set/,
+            "Got the right warning on passing a reference to set.")
+
+    }
+}
+
+{
     # Test setting of umask
     umask 077;
     my $tempdir = tempdir(CLEANUP => 1);
     my $cache = Cache::File->new(cache_root => $tempdir, cache_umask => 070);
     ok($cache, 'Cache created');
+
 
     my $entry = $cache->set('key1', 'data1');
     is($cache->count(), 1, 'Added entry');
